api sidebar style
